# esp32s3-std

./: Cargo.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.vscode copy/: launch.json
bk/: blinky.rs  blinkyv2.rs  button.rs
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
